--- a/style.css
+++ b/style.css
@@ -30,11 +30,12 @@ main {
   grid-gap: auto;
   grid-row-gap: 3rem;
   width: 80%;
+  justify-content: center;
 }
 .control-panel {
   background-color: var(--Darkblue);
   border-radius: 20px;
-  width: 100%;
+  width: 300px;
 }
 .profile {
   background-color: var(--Blue);
@@ -60,7 +61,6 @@ main {
   color: white;
   font-weight: 300;
   font-size: 18px;
-  width: 50%;
 }
 .profile-text p span {
   font-size: 13px;
@@ -88,6 +88,7 @@ main {
   height: 158px;
   overflow: hidden;
   cursor: pointer;
+  width: 300px;
 }
 .panel:hover .schedule-text {
   background-color: var(--Desaturatedblue);
@@ -122,7 +123,8 @@ main {
 .schedule-img img {
   width: 76px;
   position: relative;
-  left: 60%;
+  margin-left: 0;
+  float: right;
 }
 .schedule-text {
   position: relative;
@@ -149,7 +151,7 @@ main {
   padding-top: 10px;
 }
 .duration h2 {
-  font-size: 3rem;
+  font-size: 2rem;
   color: white;
   font-weight: 300;
 }
@@ -157,8 +159,9 @@ main {
   font-size: 14px;
   color: white;
   margin-left: auto;
+  color: var(--PaleBlue);
 }
-@media (min-width: 900px) {
+@media (min-width: 1100px) {
   .container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -170,6 +173,7 @@ main {
   .control-panel {
     grid-column: 1;
     grid-row: 1/3;
+    width: unset;
   }
   .controls {
     padding: 30px;
@@ -191,6 +195,7 @@ main {
   .profile-text p {
     font-size: 2.5rem;
     line-height: 3rem;
+    width: 50%;
   }
   .profile-text p span {
     font-size: 16px;
@@ -202,6 +207,7 @@ main {
   }
   .panel {
     height: 230px;
+    width: unset;
   }
   .schedule-text {
     height: 100%;
@@ -218,9 +224,12 @@ main {
     padding-top: 10px;
     margin-left: 0;
   }
+  .duration h2 {
+    font-size: 3rem;
+  }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1500px) {
   .container {
     width: 60%;
   }
